test/Fail/TacticDataParam.err
TacticDataParam.agda:9.9-22: error: [TacticAttributeNotAllowed]
The @tactic attribute is not allowed here
